--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
-REACT_APP_API_KEY=
-REACT_APP_AUTH_DOMAIN=
-REACT_APP_DATABASE_URL=
-REACT_APP_PROJECT_ID=
-REACT_APP_STORAGE_BUCKET=
-REACT_APP_MESSAGING_SENDER_ID=
-REACT_APP_APP_ID=
+REACT_APP_API_KEY="AIzaSyBiaNWCvbrL-p-Yow78S4Cf-F7sGKP7B6M"
+REACT_APP_AUTH_DOMAIN="libra-27786.firebaseapp.com"
+REACT_APP_DATABASE_URL="https://libra-27786-default-rtdb.europe-west1.firebasedatabase.app"
+REACT_APP_PROJECT_ID="libra-27786"
+REACT_APP_STORAGE_BUCKET="libra-27786.appspot.com"
+REACT_APP_MESSAGING_SENDER_ID="522408328931"
+REACT_APP_APP_ID="1:522408328931:web:b4543441efa2ff0e7ccfd6"
+REACT_APP_AUTH_PRIVATE_KEY="salt"
