--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "node-sass": "4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^4.0.1",
     "react-icons": "^4.2.0",
-    "react-json-to-csv": "^1.0.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-simple-hook-modal": "^1.1.0",
